--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sanju",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/sanju-joseph-j/portfolio.git",
+  "homepage": "https://sanju-joseph-j.github.io/portfolio/",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.1",
