--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sanju",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sanju-joseph-j.github.io/portfolio",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.1",
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.4",
     "react-refresh": "^0.18.0",
     "source-map-loader": "^5.0.0",
